# Switzerland

./: .gitignore  LICENSE  README.md  contabilita_sa-sagl_partitario_fatturato-interno.ac2
Francais/: Famille_avec_budget.ac2  (+3 more)
ImportApps/iso20022_camt_v2/: CMakeLists.txt  ch.banana.switzerland.import.camt.sps2021.v2.js  ch.banana.switzerland.import.camt.sps2022.v2.js  ch.banana.switzerland.import.camt.v2.js  ch.banana.switzerland.import.camt.v2.manifest.json  ch.banana.switzerland.import.camt.v2.qrc  ch.banana.switzerland.import.camt.v2.sbaa  ch.banana.switzerland.import.camt.v2.sps2022.js  changelog.md
ImportApps/iso20022_camt_v2/images/templates/: contodigiro-de.ac2  contodigiro-en.ac2  contodigiro-fr.ac2  contodigiro.ac2
payments/: CMakeLists.txt  ch.banana.batch.payments.js  ch.banana.pain.iso.2009.js  ch.banana.pain.sps.2021.js  ch.banana.pain.sps.2022.js  ch.banana.pain.sps.2025.js  ch.banana.pain001.js  ch.banana.switzerland.iso20022.pain.js  ch.banana.switzerland.pain001.js  ch.banana.switzerland.pain001.manifest.json  ch.banana.switzerland.pain001.qrc  ch.banana.switzerland.pain001.sbaa  changelog.md  checkfunctions.js  documentchange.js  pain.001.001.03.xsd  pain.001.001.09.ch.03.xsd
payments/beta/: ch.banana.switzerland.pain001.sbaa
payments/doc/: Payments_2022_en.ac2  Payments_2022_it.ac2  Payments_2024_en.ac2  Payments_2024_it.ac2  accounting_2023.ac2  excel data.xlsx
payments/files/: Payments_2022_en.ac2
payments/test/: ch.banana.switzerland.pain001.test.js  ch.banana.switzerland.pain001.test.js.tmp
payments/test/testcases/: payments_2020.ac2  payments_2021.ac2  payments_2022.ac2
payments/test/testexpected/ch.banana.switzerland.pain001.test/: ch.banana.switzerland.pain001.test.txt
payments/test/testexpected/ch.banana.switzerland.pain001.test/ConvertPaymData/: ConvertPaymData.txt  payments_2022.txt
report/customer/invoice/invoiceQR/: CMakeLists.txt  README.md  ch.banana.ch.app.emptyqr.js  ch.banana.ch.app.emptyqr.manifest.json  ch.banana.ch.app.emptyqr.qrc  ch.banana.ch.app.emptyqr.sbaa  ch.banana.ch.app.letterqrmultiple.js  ch.banana.ch.app.letterqrmultiple.manifest.json  ch.banana.ch.app.letterqrmultiple.qrc  ch.banana.ch.app.letterqrmultiple.sbaa  ch.banana.ch.invoice.ch10.address.js  ch.banana.ch.invoice.ch10.js  ch.banana.ch.invoice.ch10.manifest.json  ch.banana.ch.invoice.ch10.parameters.js  ch.banana.ch.invoice.ch10.printpreferences.js  ch.banana.ch.invoice.ch10.pro  ch.banana.ch.invoice.ch10.qrc  ch.banana.ch.invoice.ch10.sbaa  ch.banana.ch.invoice.ch10.texts.js  changelog.md  checkfunctions.js  emptyqr.css  invoice.css  letterqrmultiple.css  swissqrcode.js
report/customer/invoice/invoiceQR/test/: ch.banana.ch.app.emptyqr.test.js  ch.banana.ch.app.letterqrmultiple.test.js  ch.banana.ch.invoice.ch10.address.test.js  ch.banana.ch.invoice.ch10.test.js  ch.banana.ch.invoice.ch10.testaddress.js
(+1692 files in other folders)
